Bug 1054833 - [Messages][SMS] Red Exclamation circle of Invalid contact in Recipient list is not round, bottom cut off a little bit

--- a/apps/sms/style/composer.css
+++ b/apps/sms/style/composer.css
@@ -40,9 +40,9 @@
 }
 
 .multiline-recipients-mode.new .flex-composer {
-  top: 5.5rem;
+  top: 5.4rem;
 
-  height: calc(100% - 5.5rem);
+  height: calc(100% - 5.4rem);
 }
 
 #messages-container {
