--- a/apps/sms/style/notification.css
+++ b/apps/sms/style/notification.css
@@ -37,7 +37,7 @@ section[role="notification"] a {
 }
 
 .new.multiline-recipients-mode .overlay {
-  top: 5.5rem;
+  top: 5.4rem;
 }
 
 section[role="notification"] p {
